Added ability to reset sorting components.

--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -114,6 +114,7 @@ component.input.add: <prefix>Input container at <1> successfully added to <2>!
 component.sorting.add: <prefix>Sorting container at <1> successfully added to <2>!
 component.sorting.setitem: <prefix>Item type <2> was added to sorting container at <1>.
 component.sorting.removeitem: <prefix>Item type <2> was removed from sorting container at <1>.
+component.sorting.clearfilters: <prefix>Cleared filters.
 component.misc.add: <prefix>Miscellaneous container at <1> successfully added to <2>!
 component.remove: <prefix><red>Removed component at <1>
 component.exploded: <prefix><dark_red>NetworkComponent at <white><1><dark_red> from network <white><2><dark_red> was blown up!
